DuPont DevSB/src/objects/ob1__Output_Helper__c.object
<CustomObject>
    <description>This object does not contain data; it is used to provide functionality to the the visual force interface</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ob1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Output Helper (Contact)</relationshipLabel>
        <relationshipName>Output_Helper4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ob1__Free_Form__c</fullName>
        <label>Free-Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Output Helper</label>
    <nameField>
        <label>Output Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Output Helper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>